--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "ncuim-sa-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://localhost:8080/NCUIM-SA-TOMCAT-DEV",
   "dependencies": {
+    "@material-ui/core": "^4.7.1",
+    "@material-ui/icons": "^4.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
