--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "ncuim-sa-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://localhost:8080/NCUIM-SA-TOMCAT-DEV",
   "dependencies": {
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
+    "axios": "^0.19.0",
+    "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-top-loading-bar": "^1.2.0",
+    "source-map-explorer": "^2.1.2"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
