--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ncuim-sa-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://alpha.lc.ncu.edu.tw:8080/NCUIM-SA-TOMCAT-DEV",
   "dependencies": {
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
@@ -15,7 +16,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-top-loading-bar": "^1.2.0",
-    "source-map-explorer": "^2.1.2"
+    "source-map-explorer": "^2.1.2",
+    "swr": "^0.1.15"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
