--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.36",
     "axios": "^0.19.0",
+    "interactjs": "^1.7.3",
     "js-sha256": "^0.9.0",
     "material-table": "^1.54.2",
+    "moment": "^2.24.0",
     "qs": "^6.9.1",
     "react": "^16.12.0",
+    "react-calendar-timeline": "^0.26.7",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-toastify": "^5.4.1",
     "react-top-loading-bar": "^1.2.0",
     "source-map-explorer": "^2.1.2",
     "swr": "^0.1.15"
